[package]
name = "cnctd_roku"
version = "0.1.2"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "scaffolded by cnctd"
repository = "https://github.com/Connected-Dot/cnctd_roku"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
cnctd_rest = { version = "0.1.4", path = "../cnctd_rest" }
cnctd_shell = { version = "0.1.7", path = "../cnctd_shell" }
dirs = "5.0.1"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
telnet = "0.2.1"
